# email-parser

./: .gitignore  Cargo.toml  README.md  mail.txt
.github/workflows/: rust.yml
benches/: alternatives.rs  base64.rs
email-parser/: Cargo.toml
email-parser/benches/: alternatives.html  encodings.rs
email-parser/src/: address.rs  email.rs  error.rs  lib.rs  mime.rs  time.rs
email-parser/src/parsing/: address.rs  character_sets.rs  combinators.rs  common.rs  fields.rs  message.rs  time.rs  whitespaces.rs
email-parser/src/parsing/mime/: entity.rs  mime_fields.rs  quoted_printables.rs
email-parser/tests/: local_emails.rs
src/: address.pest  address.rs  character_sets.rs  combinators.rs  common.rs  email.rs  error.rs  fields.rs  lib.rs  main.pest  mime.rs  new_parser.rs  parser.rs  prelude.rs  quoted_string.rs  string.rs  time.rs  whitespaces.rs
src/parsing/: address.rs  base64.rs  character_sets.rs  combinators.rs  common.rs  fields.rs  message.rs  mime_fields.rs  mod.rs  quoted_printables.rs  quoted_string.rs  time.rs  whitespaces.rs
src/parsing/mime/: base64.rs  encoded_headers.rs  entity.rs  mime_fields.rs  mod.rs  multipart.rs  percent_encoding.rs  quoted_printables.rs
tests/: parsing_fields.rs  parsing_high.rs  parsing_low.rs
