[package]
name = "email-parser"
version = "0.1.3"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The fastest and lightest mail parsing Rust library."
readme = "README.md"
repository = "https://github.com/Mubelotix/email-parser"

[dependencies]
nom = "5.1"

[dev-dependencies]
email = "0.0.21"
email-format = "0.8.0"
mailparse = "0.12.1"