[package]
name = "email-parser"
version = "0.2.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The fastest and lightest email parsing Rust library."
readme = "README.md"
repository = "https://github.com/Mubelotix/email-parser"

[features]
default = ["fields"]
fields = ["to", "cc", "bcc", "date", "from", "sender", "reply-to", "message-id", "in-reply-to", "references", "subject", "comments", "keywords", "trace"]
to = []
cc = []
bcc = []
date = []
from = []
sender = []
reply-to = []
message-id = []
in-reply-to = []
references = []
subject = []
comments = []
keywords = []
trace = []

[dev-dependencies]
email = "0.0.21"
email-format = "0.8"
mailparse = "0.13"
